[gd_scene load_steps=3 format=3 uid="uid://bha8307nrgw3u"]

[ext_resource type="Script" uid="uid://cok6leku2tnci" path="res://Scenes/FirstMenu.gd" id="1_menu_script"]
[ext_resource type="FontFile" uid="uid://dxg0puyk07c1q" path="res://Fonts/Avenixel-Regular.ttf" id="2_3kv8b"]

[node name="FirstMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 60.0
offset_right = 250.0
offset_bottom = 130.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_3kv8b")
theme_override_font_sizes/font_size = 48
text = "RAJEG WARRIOR ADVENTURE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -80.0
offset_right = 125.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="BtnNewGame" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3kv8b")
theme_override_font_sizes/font_size = 20
text = "NEW GAME"

[node name="BtnLoad" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3kv8b")
theme_override_font_sizes/font_size = 20
text = "CONTINUE"

[node name="BtnCredits" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3kv8b")
theme_override_font_sizes/font_size = 20
text = "CREDITS"

[node name="BtnExit" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3kv8b")
theme_override_font_sizes/font_size = 20
text = "EXIT"

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsPanel"]
layout_mode = 0
offset_right = 500.0
offset_bottom = 300.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
text = "CREDITS

Developed By:
Moocchi and Kelompok 7

Assets By:
itch.io"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnCloseCredits" type="Button" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -45.0
offset_right = 60.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "BACK"

[node name="ConfirmationPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 20.0
offset_right = 180.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 20
text = "Kamu memiliki Save Game.
Yakin mau menimpanya?
(Progress lama akan hilang)"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = 150.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="BtnYes" type="Button" parent="ConfirmationPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Ya, Timpa"

[node name="BtnNo" type="Button" parent="ConfirmationPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Batal"

[node name="FadeOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
